--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,9 @@ header img {
   height: 50px;
 }
 
-header h1 {
-  font-size: 3rem;
-  margin: 0;
+.titulo {
+  text-align: center;
+  font-size: 2rem;
+  margin-bottom: 1rem;
+  color: #004170;
 }
