--- a/styles.css
+++ b/styles.css
@@ -10,5 +10,5 @@ header img {
   font-size: 2rem;
   margin-bottom: 1rem;
   color: #004170;
-  font-family: Arial;
+  font-family: Arial, Helvetica, sans-serif;
 }
