--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,14 @@ header img {
   color: #004170;
   font-family: Courier New, monospace;
 }
+
+header {
+  background-color: rgba(0, 151, 255, 0.8);
+  color: white;
+  text-align: center;
+  padding: 2rem 0;
+  position: relative;
+  border-radius: 20px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  margin: 2rem;
+}
