--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,10 @@ header img {
   font-family: Courier New, monospace;
 }
 
-header {
+.he {
   background-color: orange;
 }
 
-body {
+.cue {
   background-color: yellow;
 }
