--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,12 @@
-header img {
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
-  height: 100px;
-}
-
 .titulo {
   text-align: center;
   font-size: 2rem;
   margin-bottom: 1rem;
   color: #004170;
+  font-family: Courier New, monospace;
+}
+
+.superlista {
+  color: #2ce849;
   font-family: Courier New, monospace;
 }
